ui - 카페 섹션 ui 구현

--- a/EwhaHistory.css
+++ b/EwhaHistory.css
@@ -39,7 +39,8 @@ body {
 }
 
 .fancy-title,
-.streetShop-title {
+.streetShop-title,
+.cafe-title {
   align-self: flex-start;
 
   margin-top: 145px;
@@ -107,8 +108,9 @@ body {
 }
 
 .explain {
-  left: 350px;
-  top: 265px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .title {
@@ -349,15 +351,235 @@ body {
 .popular {
   width: 1440px;
   height: 815px;
+
+  display: flex;
+  justify-content: space-evenly;
+
+  margin-top: 290px;
 }
 
 .popular-imgWrap {
-  overflow-x: hidden;
+  width: 770px;
+  height: 675px;
+
+  position: relative;
+
+  overflow: hidden;
 }
 
 .problem {
   width: 1440px;
   height: 675px;
 
+  margin-top: 342px;
+
   display: flex;
+  justify-content: space-evenly;
+}
+
+.problem-imgWrap {
+  width: 700px;
+  height: 675px;
+
+  position: relative;
+}
+
+.problem1 {
+  position: absolute;
+
+  right: 0;
+  top: 0;
+
+  transform: rotate(-13.74deg);
+}
+
+.problem2 {
+  z-index: 2;
+
+  position: absolute;
+  left: 0px;
+  top: 150px;
+
+  transform: rotate(7.13deg);
+}
+
+.problem3 {
+  z-index: 1;
+
+  position: absolute;
+  right: 0px;
+  bottom: 50px;
+
+  transform: rotate(-3.17deg);
+}
+
+.problemLabel {
+  z-index: 3;
+
+  position: absolute;
+  right: 180px;
+  bottom: 300px;
+}
+
+.problem-source {
+  position: absolute;
+  left: 0px;
+  bottom: 50px;
+
+  font-size: 15px;
+}
+
+.boxSquare {
+  width: 1440px;
+  height: 750px;
+
+  margin-top: 385px;
+
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.boxSquare-imgWrap {
+  position: relative;
+
+  width: 770px;
+  height: 840px;
+}
+
+.boxSquare1 {
+  position: absolute;
+  right: 10px;
+  top: 0px;
+
+  transform: rotate(-6.57deg);
+}
+
+.boxSquare2 {
+  z-index: 2;
+  position: absolute;
+  left: 0px;
+  top: 250px;
+
+  transform: rotate(4.83deg);
+}
+
+.boxSquare3 {
+  z-index: 3;
+  position: absolute;
+  right: 0px;
+  bottom: 100px;
+
+  transform: rotate(-6.61deg);
+}
+
+.boxSquareLabel {
+  z-index: 4;
+
+  position: absolute;
+  left: 220px;
+  top: 240px;
+}
+
+.boxSquare-source {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.cafe {
+  width: 1440px;
+  height: 5022px;
+
+  background-color: #47292c;
+
+  color: #fff;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.movement {
+  width: 1440px;
+  height: 535px;
+
+  margin-top: 350px;
+
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.movement-imgWrap {
+  width: 780px;
+  height: 600px;
+
+  position: relative;
+}
+
+.movement1 {
+  position: absolute;
+
+  right: 0px;
+  top: 0px;
+}
+
+.movement2 {
+  z-index: 1;
+  position: absolute;
+
+  left: 0px;
+  bottom: 100px;
+
+  transform: rotate(2.37deg);
+}
+
+.movementLabel {
+  z-index: 1;
+
+  position: absolute;
+  top: 60px;
+  left: 220px;
+}
+
+.movement-source {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+}
+
+.board {
+  width: 1440px;
+  height: 710px;
+
+  margin-top: 340px;
+
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.board-second {
+  margin-top: 55px;
+}
+
+.board-imgWrap {
+  position: relative;
+  width: 460px;
+  height: 710px;
+}
+
+.board1 {
+  position: absolute;
+  top: 20px;
+}
+
+.boardLabel {
+  position: absolute;
+  top: 0px;
+  left: 150px;
+}
+
+.board-source {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
 }
